--- a/templates/result.html
+++ b/templates/result.html
@@ -76,7 +76,7 @@
         <div class="item-row">Q12 たばこの習慣 <span class="dot {{ colors.get('q12','gray') }}"></span></div>
     </div>
 
-    <a href="/report" class="btn-report">測定回答の詳細一覧を表示</a>
+    <a href="/report?from=result" class="btn-report" target="_blank">測定回答の詳細一覧を表示</a>
     <a href="/mypage" class="btn-home">マイページへ戻る</a>
 </body>
 </html>
